--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="navigation_viewer">Viewer</string>
     <string name="navigation_find_papers">Find papers</string>
     <string name="button_search">SEARCH</string>
+    <string name="opened_xxx_ago">Opened %1$s</string>
 </resources>
