--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 
     <!-- PaperListActivity -->
     <string name="button_find_more">FIND MORE</string>
+    <string name="downloaded_xxx_ago">Downloaded %1$s</string>
     <string name="opened_xxx_ago">Opened %1$s</string>
 
     <!-- PaperSearchActivity -->
