--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <!-- PaperSearchActivity -->
 
     <!-- PaperViewActivity-->
+    <string name="button_download">DOWNLOAD</string>
 </resources>
