Display feature words

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="button_download">DOWNLOAD</string>
     <string name="button_read">READ</string>
     <string name="category">Category</string>
+    <string name="feature_words">Feature words</string>
     <string name="similar_papers">Similar papers in my library</string>
 </resources>
